back to main, should be working

--- a/index.html
+++ b/index.html
@@ -3,24 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Image Fetcher</title>
-    <script>
-        async function fetchRandomImage() {
-            const response = await fetch('/api/GetRandomImage'); // Your Azure Function URL
-            const data = await response.json();
-            if (response.ok) {
-                document.getElementById('imageContainer').src = data.imageUrl;
-            } else {
-                console.error('Error fetching image:', data);
-                alert('Could not fetch image. Please try again.');
-            }
-        }
-    </script>
+    <title>Image with Button</title>
 </head>
 <body>
-    <h1>Random Image Fetcher</h1>
-    <button onclick="fetchRandomImage()">Get Random Image</button>
+    <img src="image.png" alt="Sample Image" width="300">
     <br>
-    <img id="imageContainer" src="" alt="Random Image" style="margin-top: 20px; max-width: 100%; height: auto;">
+    <button onclick="alert('Button clicked!')">Click Me</button>
 </body>
 </html>
